--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
             - '8080:8080'
         volumes:
             - myapp:/opt/tomcat/webapps
+            - ./config/Config.properties:/opt/apache-tomcat-8.5.37/webapps/App42PaaS-Java-MySQL-Sample-0.0.1-SNAPSHOT/Config.properties
+            - ./config/Config.properties:/opt/apache-tomcat-8.5.37/webapps/Config.properties
         depends_on:
             - java
             - mysql
