--- a/config/Config.properties
+++ b/config/Config.properties
@@ -1,5 +1,5 @@
-app42.paas.db.username = "root"
-app42.paas.db.port = "3306"
-app42.paas.db.password = "root"
-app42.paas.db.ip = "130.193.52.72"
-app42.paas.db.name = "mydb"
+app42.paas.db.username = root
+app42.paas.db.port = 3306
+app42.paas.db.password = root
+app42.paas.db.ip = mysql
+app42.paas.db.name = mydb
